--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@seanhouli/react-mapbox-search": "^1.0.5",
     "antd": "^3.20.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.1.0",
     "font-awesome": "^4.7.0",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-image-mapper": "0.0.14",
+    "react-map-gl": "^5.0.10",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
